添加外部链接

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <v-app id="app">
       <v-btn class="text-none" href="lastfm-export/">Last.FM Export</v-btn>
-      <v-btn class="text-none" inline-block href="plscp/"
+      <v-btn class="text-none" inline-block href="playlist-compare/"
         >Playlist Compare</v-btn
       >
       <v-btn class="text-none" href="ncmdaily/"
