--- a/playlist-compare/index.html
+++ b/playlist-compare/index.html
@@ -24,100 +24,140 @@
 
   <body>
     <div id="app">
-      <div class="q-pa-md q-mx-auto" style="max-width: 1000px">
-        <q-form @submit="onSubmit" @reset="onReset">
-          <q-input
-            filled
-            clearable
-            v-model="your_input"
-            label="你的歌单ID或App分享的链接"
-            autogrow
-            :rules="idRules"
-          ></q-input>
+      <q-layout view="hHh lpR fFf">
+        <q-header elevated class="bg-primary text-white">
+          <q-toolbar>
+            <q-btn dense flat round icon="menu" @click="toggleLeftDrawer" />
 
-          <div class="bg-grey-2 q-pa-sm rounded-borders flex items-center">
-            你的平台:
-            <q-option-group
-              v-model="your_platform"
-              :options="options"
-              inline
-            ></q-option-group>
-          </div>
-          <q-input
-            class="q-mt-lg"
-            filled
-            clearable
-            v-model="her_input"
-            label="ta的歌单ID或App分享的链接"
-            autogrow
-            :rules="idRules"
-          ></q-input>
-          <div class="bg-grey-2 q-pa-sm rounded-borders flex items-center">
-            ta的平台:
-            <q-option-group
-              v-model="her_platform"
-              :options="options"
-              inline
-            ></q-option-group>
-          </div>
-          <div
-            class="bg-grey-2 q-pa-sm rounded-borders flex items-center q-mt-lg"
-          >
-            <q-toggle v-model="accept" label="我接受"></q-toggle>
-            <div style="color: blue" @click="alert">服务协议</div>
-          </div>
+            <q-toolbar-title> 歌单匹配 </q-toolbar-title>
+          </q-toolbar>
+        </q-header>
 
-          <div class="q-mt-lg">
-            <q-btn label="Submit" type="submit" color="primary"></q-btn>
-            <q-btn
-              label="Reset"
-              type="reset"
-              color="primary"
-              flat
-              class="q-ml-sm"
-            ></q-btn>
-          </div>
-        </q-form>
-        <q-table
-          class="q-mt-lg"
-          row-key="id"
-          :filter="filter"
-          :rows="same"
-          :columns="columns"
-          :pagination="{rowsPerPage: 0}"
-        >
-          <template v-slot:body-cell-index="props">
-            <q-td :props="props">
-              <div>{{props.rowIndex+1}}</div>
-            </q-td>
-          </template>
-          <template v-slot:body-cell-name="props">
-            <q-td :props="props">
-              <div>
-                <a
-                  target="_blank"
-                  :href="'https://music.163.com/#/song?id=' + props.row.id"
-                >
-                  {{props.value}}
-                </a>
-              </div>
-            </q-td>
-          </template>
-          <template v-slot:top-right>
-            <q-input
-              borderless
-              dense
-              debounce="300"
-              v-model="filter"
-              placeholder="Search"
+        <q-drawer show-if-above v-model="leftDrawerOpen" side="left" bordered>
+          <q-list padding>
+            <q-item
+              clickable
+              v-ripple
+              @click='open_external_link("https://music.163.com/#/user/home?id=319475460")'
             >
-              <template v-slot:append>
-                <q-icon name="search" />
+              <q-item-section avatar>
+                <q-icon name="launch" />
+              </q-item-section>
+              <q-item-section> 我的网易云音乐主页 </q-item-section>
+            </q-item>
+
+            <q-item
+              active
+              clickable
+              v-ripple
+              @click='open_external_link("https://github.com/oldshensheep")'
+            >
+              <q-item-section avatar>
+                <q-icon name="launch" />
+              </q-item-section>
+              <q-item-section> Github </q-item-section>
+            </q-item>
+            <div class="text-center q-mt-lg">我的歌单id：444265995</div>
+          </q-list>
+        </q-drawer>
+
+        <q-page-container>
+          <div class="q-pa-md q-mx-auto" style="max-width: 1000px">
+            <q-form @submit="onSubmit" @reset="onReset">
+              <q-input
+                filled
+                clearable
+                v-model="your_input"
+                label="你的歌单ID或App分享的链接"
+                autogrow
+                :rules="idRules"
+              ></q-input>
+
+              <div class="bg-grey-2 q-pa-sm rounded-borders flex items-center">
+                你的平台:
+                <q-option-group
+                  v-model="your_platform"
+                  :options="options"
+                  inline
+                ></q-option-group>
+              </div>
+              <q-input
+                class="q-mt-lg"
+                filled
+                clearable
+                v-model="her_input"
+                label="ta的歌单ID或App分享的链接"
+                autogrow
+                :rules="idRules"
+              ></q-input>
+              <div class="bg-grey-2 q-pa-sm rounded-borders flex items-center">
+                ta的平台:
+                <q-option-group
+                  v-model="her_platform"
+                  :options="options"
+                  inline
+                ></q-option-group>
+              </div>
+              <div
+                class="bg-grey-2 q-pa-sm rounded-borders flex items-center q-mt-lg"
+              >
+                <q-toggle v-model="accept" label="我接受"></q-toggle>
+                <div style="color: blue" @click="alert">服务协议</div>
+              </div>
+
+              <div class="q-mt-lg">
+                <q-btn label="Submit" type="submit" color="primary"></q-btn>
+                <q-btn
+                  label="Reset"
+                  type="reset"
+                  color="primary"
+                  flat
+                  class="q-ml-sm"
+                ></q-btn>
+              </div>
+            </q-form>
+            <q-table
+              class="q-mt-lg"
+              row-key="id"
+              :filter="filter"
+              :rows="same"
+              :columns="columns"
+              :pagination="{rowsPerPage: 0}"
+            >
+              <template v-slot:body-cell-index="props">
+                <q-td :props="props">
+                  <div>{{props.rowIndex+1}}</div>
+                </q-td>
               </template>
-            </q-input>
-          </template>
-        </q-table>
-      </div>
+              <template v-slot:body-cell-name="props">
+                <q-td :props="props">
+                  <div>
+                    <a
+                      target="_blank"
+                      :href="'https://music.163.com/#/song?id=' + props.row.id"
+                    >
+                      {{props.value}}
+                    </a>
+                  </div>
+                </q-td>
+              </template>
+              <template v-slot:top-right>
+                <q-input
+                  borderless
+                  dense
+                  debounce="300"
+                  v-model="filter"
+                  placeholder="Search"
+                >
+                  <template v-slot:append>
+                    <q-icon name="search" />
+                  </template>
+                </q-input>
+              </template>
+            </q-table>
+          </div>
+        </q-page-container>
+      </q-layout>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.prod.js"></script>
