--- a/playlist-compare/index.html
+++ b/playlist-compare/index.html
@@ -154,15 +154,7 @@
                 你和ta有 <q-badge color="green"> {{same.length}} </q-badge>
                 首相同的歌曲
               </div>
-              <div>
-                相似度
-                <q-badge color="purple">
-                  {{(same.length*2/(your_playlist.len+her_playlist.len)*100).toFixed(2)}}%
-                </q-badge>
-                <div class="text-grey">
-                  计算公式 相同歌曲数量*2/(你的歌曲数量+ta的歌曲数量)
-                </div>
-              </div>
+              <q-badge color="pink"> {{msg}} </q-badge>
             </div>
 
             <q-table
