--- a/webgl/index.html
+++ b/webgl/index.html
@@ -1,46 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebGL</title>
-  </head>
-  <body>
-    <v-app id="app">
-      <v-btn class="text-none" inline-block href="./audio-webgl.html"
-        >audio-webgl</v-btn
-      >
-      <v-btn class="text-none" inline-block href="./audio-webgl-v2.html"
-        >audio-webgl-v2</v-btn
-      >
-      <v-btn class="text-none" inline-block href="./audio-webgl-v3.html"
-        >audio-webgl-v3</v-btn
-      >
-      <v-btn class="text-none" href="./dip-webgl.html"
-        >Digital image processing(WebGL)</v-btn
-      >
-      <v-btn class="text-none" href="./transform.html">transform</v-btn>
-      <v-btn class="text-none" href="./triangle.html">triangle</v-btn>
-    </v-app>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.js"></script>
-    <script>
-      new Vue({
-        el: "#app",
-        vuetify: new Vuetify(),
-      });
-    </script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WebGL</title>
+</head>
+
+<body>
+  <v-app id="app">
+    <v-btn class="text-none" inline-block href="./audio-webgl.html">audio-webgl</v-btn>
+    <v-btn class="text-none" inline-block href="./audio-webgl-v2.html">audio-webgl-v2</v-btn>
+    <v-btn class="text-none" inline-block href="./audio-webgl-v3.html">audio-webgl-v3</v-btn>
+    <v-btn class="text-none" inline-block href="./video.html">
+      video-webgl
+    </v-btn>
+    <v-btn class="text-none" href="./dip-webgl.html">Digital image processing(WebGL)</v-btn>
+    <v-btn class="text-none" href="./transform.html">transform</v-btn>
+    <v-btn class="text-none" href="./triangle.html">triangle</v-btn>
+  </v-app>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.js"></script>
+  <script>
+    new Vue({
+      el: "#app",
+      vuetify: new Vuetify(),
+    });
+  </script>
+</body>
+
 </html>
